feat: store inferred matches in the DB
